# HubSpot-MCP-Insight-Manager

./: .gitignore  config.py  hubspot_mcp_client.py  hubspot_mcp_server.py  pyproject.toml  requirements.txt
localRepo/: index.html
